examples/invalid/test29.alice

The looking-glass proc (number x)
opened

closed

The room func (number x) contained a number
opened
  Alice found x.
closed

The looking-glass hatta ()
opened
  x was a number, 
  func(10).
  x became proc(10).
closed
